# hs-file-rename

./: Main.hs  PathType.hs  Prefix.hs  file-rename.cabal
